# bx_skills

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  concept.md  psync-skills.ps1  psync-skills.sh  pyproject.toml  sync-skills.ps1  sync-skills.sh
.github/workflows/: default_cicd_public.yml
bx-bash-clean-architecture/: SKILL.md  canonical-example.md
bx-bash-reference/: SKILL.md  bash-features.md  functions-parameters-expansions.md  job-control-readline-history.md  redirections-and-execution.md  shell-builtins.md  shell-syntax-and-commands.md  shell-variables.md
bx-enhance-code-quality/: SKILL.md
bx-plan-executor/: SKILL.md
bx-plan-writer/: SKILL.md
bx-proxmox/: SKILL.md  draft.md  draft.md.backup
bx-python-clean-architecture/: SKILL.md  canonical-example.md  review-checklists.md  script-mode.md
bx-python-libraries-to-use/: SKILL.md
bx-skill-writer/: SKILL.md
bx-skillwriter/: SKILL.md
bx-uv/: SKILL.md
force-using-skills/: SKILL.md
src/bx_skills/: __init__conf__.py  app.py  core.py
src/bx_skills/catalog_commands/: tfbpr.md
src/bx_skills/catalog_skills/bx-enhance-code-quality/: SKILL.md
src/bx_skills/catalog_skills/bx-humanise-de/: SKILL.md
src/bx_skills/catalog_skills/bx-humanize-en/: SKILL.md
src/bx_skills/catalog_skills/bx-performance/: SKILL.md  find_cache_candidates.py  find_hotspots.py  find_uncompiled_regex.py  prioritize_cache_candidates.py  profile_with_cache_template.py
src/bx_skills/catalog_skills/bx-python-clean-architecture/: library-mode.md
src/bx_skills/catalog_skills/bx-python-libraries-to-use/: SKILL.md
src/bx_skills/catalog_skills/bx-skill-writer/: SKILL.md
src/bx_skills/catalog_skills/bx-textual/examples/events/: dictionary.py
src/bx_skills/catalog_skills/bx-textual/examples/guide/workers/: weather01.py  weather02.py  weather03.py  weather04.py
src/bx_skills/catalog_skills/bx-textual/guide/: events.md  workers.md
src/bx_skills/catalog_skills/bx_review_anal_sub_perf/: SKILL.md  analyze_profile.py  compare_performance.sh  validate_perf_claims.py
src/bx_skills/catalog_skills/md-table-formatting/: SKILL.md  reformat_tables.py
tests/: test_app_integration.py  test_core_execution.py  test_core_planning.py
writing-skills/: SKILL.md
